# trae-06

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cache.cpp  Cache.h  ConfigManager.cpp  ConfigManager.h  DAO.cpp  DAO.h  HttpServer.cpp  HttpServer.h  JsonUtils.h  LICENSE  Models.h  README.md  RentalAPI.cpp  RentalAPI.h  SQLiteHelper.cpp  SQLiteHelper.h  StationAPI.cpp  StationAPI.h  StatsAPI.cpp  StatsAPI.h  UserAPI.cpp  UserAPI.h  build.sh  compile_errors.txt  conanfile.txt  config.json  config.json.example  init.sql  init_db.sql  main  main.cc  main.cpp  preprocessed_output.txt  test_different.cpp  test_optional  test_optional.cpp  (+5 more)
src/: CMakeLists.txt  application_dao.cpp  application_service.cpp  auth.cpp  candidate_dao.cpp  candidate_service.cpp  claim_service.cpp  company.cpp  company_dao.cpp  company_service.cpp  config.cpp  dashboard_service.cpp  database.cpp  dto.cpp  example_tasks.cpp  found_item_service.cpp  http_server.cpp  interview_dao.cpp  interview_service.cpp  job.cpp  job_dao.cpp  job_queue.cpp  job_service.cpp  json_utils.cpp  log.cpp  logger.cpp  lost_item_service.cpp  main.cpp  meal_plan_service.cpp  notification_service.cpp  recipe_service.cpp  router.cpp  server.cpp  service.cpp  shopping_list_service.cpp  statistics_dao.cpp  statistics_service.cpp  storage.cpp  task_executor.cpp  task_factory.cpp  (+2 more)
src/auth/: JWT.cpp  auth.cpp  auth.h  middleware.cpp  middleware.h
src/cache/: LRUCache.cpp  SessionCache.cpp  SessionCache.hpp  cache_config.h  cache_manager.cpp  cache_manager.h  lru_cache.h
src/chat_archive/: Config.cpp  Database.cpp  Logger.cpp
src/config/: Config.cpp
src/controller/: BookController.cpp  BookController.h  BookingController.hpp  BorrowController.cpp  BorrowController.h  ClassSessionController.hpp  ClassTemplateController.hpp  CoachController.hpp  Controller.h  EventController.cpp  GameController.cpp  GameController.h  HealthController.cpp  LeaderboardController.cpp  LeaderboardController.h  MemberController.hpp  ReservationController.cpp  ReservationController.h  ScoreController.cpp  ScoreController.h  SleepSessionController.cpp  SnippetController.cpp  StatsController.cpp  StatsController.hpp  TrainingLogController.hpp  UserController.cpp  UserController.h  UserSettingController.cpp  announcement_controller.cpp  announcement_controller.h  controller.h  survey_controller.cpp  user_controller.cpp  user_controller.h
src/controllers/: AlbumController.cpp  AuthController.cpp  ImageController.cpp  http_server.h  middleware.cpp  parking_spot_controller.cpp  reservation_controller.cpp  user_controller.cpp
src/dao/: AppointmentDAO.cpp  BookDAO.cpp  BookDAO.h  BorrowRecordDAO.cpp  BorrowRecordDAO.h  DepartmentDAO.cpp  DoctorDAO.cpp  PetDAO.cpp  RecordDAO.cpp  ReservationRecordDAO.cpp  ReservationRecordDAO.h  SleepSessionDao.cpp  TokenDAO.cpp  UserDAO.cpp  UserDAO.h  UserDao.cpp  UserSettingDao.cpp  database.cpp  parking_spot_dao.cpp  reservation_dao.cpp  session_dao.cpp  user_dao.cpp
src/daos/: AlbumDAO.cpp  ImageItemDAO.cpp  ImageLikeDAO.cpp  ImageTagDAO.cpp  TagDAO.cpp  UserDAO.cpp
src/data/: BookingDao.cpp  BookingDao.hpp  ClassSessionDao.cpp  ClassSessionDao.hpp  ClassTemplateDao.cpp  ClassTemplateDao.hpp  CoachDao.cpp  CoachDao.hpp  Database.cpp  Database.hpp  MemberDao.cpp  MemberDao.hpp  TrainingLogDao.cpp  TrainingLogDao.hpp
src/database/: Database.cpp
src/db/: database.cpp  db_connection.h  db_pool.h
src/domain/: announcement.cpp  announcement.h  like.cpp  like.h  read_receipt.cpp  read_receipt.h  user.cpp  user.h
src/dto/: DTOs.hpp
src/http/: Server.cpp  Server.h  response_util.cpp  response_util.h  router.cpp  router.h
src/logging/: Logging.cpp
src/model/: Book.cpp  Book.h  BorrowRecord.cpp  BorrowRecord.h  CheckInLog.cpp  Event.cpp  Game.h  Leaderboard.h  Registration.cpp  ReservationRecord.cpp  ReservationRecord.h  Score.h  Session.h  User.cpp  User.h
src/models/: Bookmark.cpp  Stats.cpp  User.cpp  announcement.cpp  announcement.h  answer.cpp  device.h  like.cpp  models.cpp  question.cpp  read_receipt.cpp  read_receipt.h  repair_order.h  repair_status_history.h  service_center.h  tag.cpp  user.cpp  user.h  warranty_policy.h
src/repositories/: announcement_repository.cpp  announcement_repository.h  db_connection_pool.cpp  db_connection_pool.h  device_repository.h  read_receipt_repository.cpp  read_receipt_repository.h  repair_order_repository.h  repair_status_history_repository.h  service_center_repository.h  user_repository.cpp  user_repository.h  warranty_policy_repository.h
src/repository/: BaseRepository.cpp  BaseRepository.h  BookmarkRepository.cpp  DatabasePool.cpp  DatabaseRepository.cpp  GameRepository.h  LeaderboardRepository.h  SQLiteBaseRepository.h  SQLiteBaseRepository.tpp  SQLiteGameRepository.cpp  SQLiteGameRepository.h  SQLiteLeaderboardRepository.cpp  SQLiteLeaderboardRepository.h  SQLiteScoreRepository.cpp  SQLiteScoreRepository.h  SQLiteSessionRepository.cpp  SQLiteSessionRepository.h  SQLiteUserRepository.cpp  SQLiteUserRepository.h  ScoreRepository.h  SessionRepository.h  SnippetRepository.cpp  UserRepository.cpp  UserRepository.h  like_repository.h  survey_repository.cpp
src/server/: HTTPServer.cpp  HttpServer.cpp  RouteRegistrar.cpp
src/service/: AppointmentService.cpp  BookService.cpp  BookService.h  BookingService.cpp  BookingService.hpp  BookmarkService.cpp  BorrowService.cpp  BorrowService.h  ClassSessionService.cpp  ClassSessionService.hpp  ClassTemplateService.cpp  ClassTemplateService.hpp  CoachService.cpp  CoachService.hpp  DoctorService.cpp  EventService.cpp  GameService.cpp  GameService.h  LeaderboardService.cpp  LeaderboardService.h  MemberService.cpp  MemberService.hpp  PetService.cpp  (+16 more)
test/: CMakeLists.txt  test_http_server.cpp  test_integration.cpp  test_main.cpp
tests/: CMakeLists.txt  chat_archive_test.cpp  contract_service_test.cpp  shopping_list_test.cpp  test_announcement_service.cpp  test_bookmark_service.cpp  test_config.json  test_jwt.cpp  test_main.cpp  test_read_receipt_service.cpp  test_stats.cpp  test_user_service.cpp  test_utils.h
(+279 files in other folders)
